# image_scaling

./: .gitignore  CMakeLists.txt  README.md
include/: conv2D.hpp  entropyFilter.hpp
src/: artisticAM.cpp  cluster.py  conv2D.cpp  convert.py  directed.cpp  entropy.cpp  friends.cpp  friends_save.cpp  friends_smooth.cpp  mosaic.cpp  net.py  old_friends.cpp  scale.cpp
